--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="card">
             <h1>Age Calculator</h1>
 <div class="input-box">
-        <input type="date" id="date" placeholder="touch to slelect date">
+        <input type="date" id="date" >
            <button onclick="calculateAge()">calculate</button>
     </div>
     <p id="result" class="result"></p>
